add signup method
